[gd_scene load_steps=3 format=3 uid="uid://0arkj3ss1fbj"]

[ext_resource type="PackedScene" uid="uid://bxd3i06rqpxf0" path="res://sources/menus/register/steps/base_step.tscn" id="1_crpog"]
[ext_resource type="Script" uid="uid://0vcwta1jnwr6" path="res://sources/menus/register/steps/recap_step.gd" id="2_0vlqx"]

[node name="RecapStep" instance=ExtResource("1_crpog")]
script = ExtResource("2_0vlqx")

[node name="ValidateButton" parent="RightMargin/RightContainer" index="0"]
text = "VALIDATE"

[node name="PanelContainer" parent="." index="2"]
anchor_bottom = 0.9

[node name="VBoxContainer" parent="PanelContainer/QuestionContainer" index="0"]
visible = false

[node name="QuestionLabel" parent="PanelContainer/QuestionContainer/VBoxContainer" index="0"]
theme_override_font_sizes/font_size = 100

[node name="InfoLabel" parent="PanelContainer/QuestionContainer/VBoxContainer" index="1"]
custom_minimum_size = Vector2(1500, 0)
theme_override_font_sizes/font_size = 100
autowrap_mode = 2

[node name="SummaryContainer" type="VBoxContainer" parent="PanelContainer/QuestionContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "REGISTRATION_SUMMARY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/QuestionContainer/SummaryContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Email" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="AccountType" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="EducationMethod" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="DevicesCount" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="StudentsCount" type="Label" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="RecapContainer" type="VBoxContainer" parent="PanelContainer/QuestionContainer/SummaryContainer/ScrollContainer/VBoxContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2

[node name="FormValidator" parent="." index="3"]
visible = false
